Fix CSS 'namespacing' issue

--- a/css/todo-style.css
+++ b/css/todo-style.css
@@ -387,7 +387,7 @@
 	Hack to remove background from Mobile Safari.
 	Can't use it globally since it destroys checkboxes in Firefox and Opera
 */
-#todoapp @media screen and (-webkit-min-device-pixel-ratio:0) {
+@media screen and (-webkit-min-device-pixel-ratio:0) {
 	#toggle-all,
 	#todo-list li .toggle {
 		background: none;
